--- a/css/signature.css
+++ b/css/signature.css
@@ -44,6 +44,6 @@ td {
 
 .container {
   padding: 30px;
-  background: url('https://raw.githubusercontent.com/paywake/dev/main/gradient.png');
+  background: url('https://onload.paywake.net/gradient.png');
   background-size: cover;
 }
